...
            "state" : "translated",
            "value" : "Om"
          }
        }
      }
    },
    "Accessory Paired" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zubehör gekoppelt"
          }
...
            "state" : "translated",
            "value" : "Tillbehör kopplat"
          }
        }
      }
    },
    "Add Device" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gerät hinzufügen"
          }
...
            "state" : "translated",
            "value" : "Ansluter"
          }
        }
      }
    },
    "Device Details" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gerätedetails"
          }
...
            "state" : "translated",
            "value" : "Enhetsdetaljer"
          }
        }
      }
    },
    "Devices" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Geräte"
          }
...
            "state" : "translated",
            "value" : "Kopplar från"
          }
        }
      }
    },
    "Discovering" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Suche läuft"
          }
...
            "state" : "translated",
            "value" : "Vill du koppla %1$@ till appen %2$@?"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fertig"
          }
...
            "state" : "translated",
            "value" : "Klar"
          }
        }
      }
    },
    "enter device name" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gerätenamen eingeben"
          }
...
            "state" : "translated",
            "value" : "Koppling av tillbehör misslyckades."
          }
        }
      }
    },
    "Forget Device" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gerät entfernen"
          }
...
            "state" : "translated",
            "value" : "Glöm enhet"
          }
        }
      }
    },
    "Forget This Device" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dieses Gerät entfernen"
          }
...
            "state" : "translated",
            "value" : "Glöm den här enheten"
          }
        }
      }
    },
    "Fully Unpair Device" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gerät vollständig entkoppeln"
          }
...
            "state" : "translated",
            "value" : "Se till att ta bort enheten från Bluetooth-inställningarna för att koppla bort den helt."
          }
        }
      }
    },
    "Measurement Recorded" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Messung gespeichert"
          }
...
            "state" : "translated",
            "value" : "Namn"
          }
        }
      }
    },
    "No Devices" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Keine Geräte"
          }
...
            "state" : "translated",
            "value" : "Inga väntande mätningar"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
...
            "state" : "translated",
            "value" : "den %1$@ kl. %2$@"
          }
        }
      }
    },
    "Open Settings" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Einstellungen öffnen"
          }
...
            "state" : "translated",
            "value" : "Öppna inställningar"
          }
        }
      }
    },
    "Pair" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Koppeln"
          }
...
            "state" : "translated",
            "value" : "Koppla"
          }
        }
      }
    },
    "Pair Accessory" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zubehör koppeln"
          }
...
            "state" : "translated",
            "value" : "Koppla tillbehör"
          }
        }
      }
    },
    "Pair New Device" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Neues Gerät koppeln"
          }
...
            "state" : "translated",
            "value" : "Kopplade enheter visas här när de är inställda."
          }
        }
      }
    },
    "Pairing Failed" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kopplung fehlgeschlagen"
          }
...
            "state" : "translated",
            "value" : "Spara"
          }
        }
      }
    },
    "Synchronizing ..." : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Synchronisieren ..."
          }
...
