...
public struct DismissButton: View {
    @Environment(\.dismiss) private var dismiss

    @_documentation(visibility: internal)
    public var body: some View {
        button
            .accessibilityIdentifier("Close")
    }
    
    
    @ViewBuilder private var button: some View {
    #if os(visionOS) || os(tvOS) || os(macOS)
        if #available(visionOS 26, tvOS 26, macOS 26, *) {
...
