...
            pairedDevices.showAccessoryDiscovery()
        }
            .navigationTitle(Text("Devices", bundle: .module))
            // automatically search if no devices are paired
            .scanNearbyDevices(enabled: pairedDevices.isScanningForNearbyDevices, with: bluetooth)
            .sheet(isPresented: $pairedDevices.shouldPresentDevicePairing) {
                AccessorySetupSheet(pairedDevices.discoveredDevices, appName: appName) {
                    pairingHint
                }
            }
            .toolbar {
                ToolbarItem(placement: .primaryAction) {
                    // indicate that we are scanning in the background
...
